@@ -7,6 +7,7 @@ dgenf.orig,
 dgengamma,
 dgengamma.orig,
 dgompertz,
+dllogis,
 dsurvspline,
 flexsurvreg,
 flexsurvspline,
@@ -25,6 +26,8 @@ hgengamma.orig,
 Hgengamma.orig,
 hgompertz,
 Hgompertz,
+hllogis,
+Hllogis,
 hlnorm,    
 Hlnorm,    
 hsurvspline,
@@ -39,6 +42,7 @@ pgenf.orig,
 pgengamma,
 pgengamma.orig,
 pgompertz,
+pllogis,
 psurvspline,
 plot.flexsurvreg,
 pmatrix.fs,
@@ -49,12 +53,14 @@ qgenf.orig,
 qgengamma,
 qgengamma.orig,
 qgompertz,
+qllogis,    
 qsurvspline,
 rgenf,
 rgenf.orig,
 rgengamma,
 rgengamma.orig,
 rgompertz,
+rllogis,    
 sim.fmsm,    
 summary.flexsurvreg,
 totlos.fs,
