@@ -1,9 +1,21 @@
 Make sure all features have tests.  use new testthat skip_on_cran() if slow
 
+model list format for pmatrix.fs, totlos.fs. just need to form basepars.mat for given covariates
+
+Redo custom documentation in vignette to be EV
+
 
 OPTIONAL
 
 make plot/summary do baseline values of factor covs and mean of continuous
+
+Delta method for survival - a lot of faff. 
+
+log-logistic built in: todo derivatives.  which parameterisation?
+   shape, scale one is consistent with weibull link, eha and current
+   manual
+   S(t) = 1/(1 + (t/scale)^shape),   analog to weibull S(t) = exp(-(t/scale)^shape)
+   though not with ActuDistns or Stata (though dweibull not same as stata)
 
 Generic (restricted) mean of distributions, integration if necessary
 
@@ -28,3 +40,5 @@ CIs as grey bands not lines
 #are these buggy in survreg::Surv?
 #time <- ifelse(time == Inf, NA, time)
 #time2 <- ifelse(time2 == -Inf, NA, time2)
+
+Migrate doc to roxygen?
